hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tarray.php.exp
File "tarray.php", line 8, characters 16-26:
Invalid return type (Typing[4110])
File "tarray.php", line 8, characters 33-42:
This is an array (used like a vector)
File "tarray.php", line 8, characters 16-26:
It is incompatible with a dynamic value
File "tarray.php", line 12, characters 16-34:
Invalid return type (Typing[4110])
File "tarray.php", line 12, characters 41-58:
This is an array (used like a hashtable)
File "tarray.php", line 12, characters 16-34:
It is incompatible with a dynamic value
